--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-router": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-typed": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
