--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^2.7.1",
     "react-typed": "^1.1.2"
   },
   "scripts": {
