--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sprakash57.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sprakash57.github.io/Portfolio",
+  "homepage": "https://sprakash57.github.io/portfolio/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
