--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "emailjs-com": "^2.3.2",
     "gh-pages": "^2.0.1",
+    "node-geocoder": "^3.22.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
