--- a/package.json
+++ b/package.json
@@ -1,39 +1,31 @@
 {
-  "name": "sprakash57.github.io",
-  "version": "0.1.0",
+  "name": "gatsby-starter-hello-world",
   "private": true,
-  "homepage": "https://sprakash57.github.io/portfolio/",
-  "dependencies": {
-    "@iconify/react": "^1.0.7",
-    "bootstrap": "^4.3.1",
-    "classnames": "^2.2.6",
-    "emailjs-com": "^2.3.2",
-    "gh-pages": "^2.0.1",
-    "node-geocoder": "^3.22.0",
-    "react": "^16.8.4",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.4",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "react-transition-group": "^2.7.1",
-    "react-typed": "^1.1.2"
-  },
+  "description": "A simplified bare-bones starter for Gatsby",
+  "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "gatsby": "^2.21.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "prettier": "2.0.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
