--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   "dependencies": {
     "gatsby": "^2.21.0",
     "gatsby-plugin-sass": "^2.3.0",
+    "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-remark-images": "^3.3.0",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-remark": "^2.8.4",
     "node-sass": "^4.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "prettier": "2.0.5"
   },
   "repository": {
