--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -14,11 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "gatsby": "^2.21.0",
     "gatsby-plugin-sass": "^2.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-contentful": "^2.3.1",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.4",
     "node-sass": "^4.14.0",
@@ -26,7 +28,7 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "prettier": "2.0.5"
   },
   "repository": {
