--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "gatsby": "^2.21.0",
+    "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sass": "^2.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-remark-images": "^3.3.0",
@@ -25,7 +26,8 @@
     "gatsby-transformer-remark": "^2.8.4",
     "node-sass": "^4.14.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
