--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.21.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sass": "^2.3.0",
@@ -24,10 +25,13 @@
     "gatsby-source-contentful": "^2.3.1",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.4",
+    "jquery": "^3.5.0",
     "node-sass": "^4.14.0",
+    "popper.js": "^1.12.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "typeface-bangers": "0.0.72"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
