--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
+    "disqus-react": "^1.0.8",
     "gatsby": "^2.21.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sass": "^2.3.0",
@@ -29,7 +31,7 @@
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.4",
     "jquery": "^3.5.1",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.12.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
