removed shortname attributes appearing in the console

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blogfolio",
   "private": true,
   "description": "A portfolio site on steroids with gatsby blogs",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -20,8 +20,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
-    "disqus-react": "^1.0.8",
     "gatsby": "^2.21.0",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sass": "^2.3.0",
