--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "3.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,58 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.5",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@chakra-ui/icons": "^1.0.1",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@mapbox/rehype-prism": "^0.5.0",
-    "@mdx-js/loader": "^1.6.18",
-    "@mdx-js/mdx": "^1.6.18",
-    "@mdx-js/react": "^1.6.18",
-    "@next/mdx": "^9.5.3",
-    "babel-plugin-import-glob-array": "^0.2.0",
-    "chart.js": "^2.9.4",
-    "comma-number": "^2.0.1",
-    "date-fns": "^2.16.1",
-    "firebase": "^7.22.1",
-    "firebase-admin": "^9.2.0",
-    "framer-motion": "^3.10.3",
-    "fs": "^0.0.1-security",
-    "gh-polyglot": "^2.3.3",
-    "googleapis": "^67.0.0",
-    "gray-matter": "^4.0.2",
-    "jquery": "^3.5.1",
-    "mdx-prism": "^0.3.1",
-    "next-google-fonts": "^1.2.1",
-    "next-mdx-remote": "^1.0.1",
-    "next-seo": "^4.11.0",
-    "node-html-parser": "^1.2.20",
-    "prettier": "^2.1.2",
-    "quirrel": "^1.0.4",
-    "raw-loader": "^4.0.1",
-    "react-device-detect": "^1.14.0",
-    "react-icons": "^3.11.0",
-    "react-markdown": "^4.3.1",
-    "react-table": "^7.6.0",
-    "react-tweet-embed": "^1.2.2",
-    "reading-time": "^1.2.0",
-    "recompose": "^0.30.0",
-    "rehype": "^11.0.0",
-    "remark-autolink-headings": "^6.0.1",
-    "remark-capitalize": "^1.1.0",
-    "remark-code-titles": "^0.1.1",
-    "remark-slug": "^6.0.0",
-    "styled-components": "^5.1.1",
-    "swr": "^0.2.3"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.14",
+    "@types/react": "17.0.15",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5",
-    "globby": "^11.0.1"
+    "typescript": "4.3.5"
   }
 }
