--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
+    "next-mdx-remote": "^3.0.4",
+    "path": "^0.12.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reading-time": "^1.3.0",
+    "sass": "^1.36.0"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
