--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.1",
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "fs": "^0.0.1-security",
+    "graphql": "^15.5.1",
     "gray-matter": "^4.0.3",
     "next": "11.0.1",
     "next-mdx-remote": "^3.0.4",
