--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,14 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
+        "downlevelIteration": true,
         "baseUrl": ".",
         "paths": {
             "@/components/*": [
                 "components/*"
             ],
             "@/common/*": [
-                "components/Common/*"
+                "components/common/*"
             ],
             "@/data/*": [
                 "data/*"
