--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.3.0",
-    "sass": "^1.36.0"
+    "sass": "^1.36.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
