--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "dompurify": "^2.3.1",
     "framer-motion": "^4",
     "fs": "^0.0.1-security",
     "graphql": "^15.5.1",
     "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^0.15.0",
     "next": "11.0.1",
     "next-mdx-remote": "^3.0.4",
     "path": "^0.12.7",
@@ -27,6 +29,7 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/dompurify": "2.2.3",
     "@types/react": "17.0.15",
     "@types/react-dom": "^17.0.9",
     "eslint": "7.31.0",
