--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "portfolio",
-  "version": "0.2.5",
-  "private": true,
+  "version": "3.0.0",
+  "author": {
+    "name": "Sunny Prakash"
+  },
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/sprakash57/portfolio"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,15 +16,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.1",
-    "@chakra-ui/react": "^1.6.5",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "dompurify": "^2.3.1",
-    "framer-motion": "^4",
     "fs": "^0.0.1-security",
     "graphql": "^15.5.1",
     "gray-matter": "^4.0.3",
-    "isomorphic-dompurify": "^0.15.0",
     "next": "11.0.1",
     "next-mdx-remote": "^3.0.4",
     "path": "^0.12.7",
