--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "portfolio",
   "version": "3.3.1",
   "author": {
-    "name": "Sunny Prakash"
+    "name": "Sunny Prakash",
+    "email": "sunny.prakashgm@gmail.com"
   },
   "license": "MIT",
   "repository": {
@@ -18,19 +19,21 @@
     "@apollo/client": "^3.4.1",
     "@supabase/supabase-js": "^1.22.6",
     "@supabase/ui": "^0.35.0",
+    "dompurify": "^2.3.3",
     "fs": "^0.0.1-security",
     "graphql": "^15.5.1",
     "gray-matter": "^4.0.3",
-    "next": "11.1.1",
+    "next": "11.1.2",
     "next-mdx-remote": "^3.0.4",
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.3.0",
     "sass": "^1.36.0",
-    "swr": "^0.5.6"
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.3.1",
     "@types/react": "17.0.15",
     "@types/react-dom": "^17.0.9",
     "eslint": "7.31.0",
