--- a/package.json
+++ b/package.json
@@ -17,27 +17,29 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.1",
-    "@supabase/supabase-js": "^1.22.6",
-    "@supabase/ui": "^0.35.0",
+    "@supabase/supabase-js": "1.35.3",
+    "@supabase/ui": "0.36.5",
     "dompurify": "^2.3.3",
     "fs": "^0.0.1-security",
     "graphql": "^15.5.1",
     "gray-matter": "^4.0.3",
-    "next": "11.1.2",
+    "next": "^12.1.6",
     "next-mdx-remote": "^3.0.4",
     "path": "^0.12.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "reading-time": "^1.3.0",
-    "sass": "^1.36.0",
-    "swr": "^1.0.1"
+    "swr": "1.3.0"
   },
   "devDependencies": {
+    "@types/node": "17.0.31",
     "@types/dompurify": "^2.3.1",
-    "@types/react": "17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.3",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "sass": "^1.51.0",
+    "typescript": "4.6.4"
   }
 }
