--- a/projects.json
+++ b/projects.json
@@ -1,44 +1,50 @@
 [
     {
-        "title": "Bookplorer",
-        "description": "Find & explore books around the globe. Time to become Bibliophile 🤓.",
-        "thumbnail": "bookplorer.png",
-        "platform": "web",
-        "url": ""
-    },
-    {
+        "id": 5,
         "title": "Mealander",
-        "description": "Because your meal plans deserve a calendar.",
-        "thumbnail": "Mealander.png",
-        "platform": "android",
-        "url": ""
-    },
-    {
-        "title": "Discogspedia",
-        "description": "Find & explore books around the globe. Time to become Bibliophile 🤓.",
-        "thumbnail": "bookplorer.png",
-        "platform": "web",
-        "url": ""
-    },
-    {
-        "title": "Connect 3",
-        "description": "Find & explore books around the globe. Time to become Bibliophile 🤓.",
-        "thumbnail": "bookplorer.png",
-        "platform": "android",
-        "url": ""
-    },
-    {
-        "title": "create-react-saga",
-        "description": "Because your meal plans deserve a calendar.",
-        "thumbnail": "Mealander.png",
-        "platform": "npm",
-        "url": ""
-    },
-    {
+        "summary": "Calendar that is specially made for your meal plans. It also generate plans for you in one click.",
+        "image": "https://i.ibb.co/1RB3gM8/Mealander-800.png",
+        "thumbnail": "https://i.ibb.co/p4Ng7QJ/Mealander-800.png",
+        "platforms": ["android", "windows"],
+        "url": "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
+      },
+      {
+        "id": 4,
+        "title": "Create React Saga",
+        "summary": "A CLI tool to quickly setup your next Redux-Saga in React ecosystem backed by Webpack.",
+        "image": "https://i.ibb.co/FK5Z23f/wrs.png",
+        "thumbnail": "https://i.ibb.co/zrX9pxL/wrs.png",
+        "platforms": ["npm-color"],
+        "url": "https://sprakash57.github.io/create-react-saga"
+      },
+      {
+        "id": 3,
         "title": "Ecslate",
-        "description": "Because your meal plans deserve a calendar.",
-        "thumbnail": "Mealander.png",
-        "platform": "windows",
-        "url": ""
-    }
+        "summary":
+          "Why open web browser and confiscate all your data online, when you can execute code snippets, compare files and format them offline on your PC.",
+        "image": "https://i.ibb.co/zQPPtRc/ecslate.png",
+        "thumbnail": "https://i.ibb.co/PF11Vhp/ecslate.png",
+        "platforms": ["windows"],
+        "url": "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
+      },
+      {
+        "id": 2,
+        "title": "Discogspedia",
+        "summary":
+          "Modern search tool to find music releases published over Discogs website. Oh! Did I tell you it has clutter-free and clean UI. 🧹",
+        "image": "https://i.ibb.co/Jc9CQN9/discogspedia.png",
+        "thumbnail": "https://i.ibb.co/VLs3mds/discogspedia.png",
+        "platforms": ["chrome"],
+        "url": "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
+      },
+      {
+        "id": 1,
+        "title": "Connect 3",
+        "summary":
+          "Good old classic tic tac toe on your android. Play against your friend or challange your smartphone 😉 in duel.",
+        "image": "https://i.ibb.co/8jJ53rd/logo.png",
+        "thumbnail": "https://i.ibb.co/gDGT1SP/logo.png",
+        "platforms": ["android"],
+        "url": "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
+      }
 ]
