--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "graphql": "^16.5.0",
     "gray-matter": "^4.0.3",
     "next": "^12.1.6",
-    "next-mdx-remote": "^3.0.4",
+    "next-mdx-remote": "4.0.3",
     "path": "^0.12.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "reading-time": "^1.3.0",
+    "styled-components": "^5.3.5",
     "swr": "1.3.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
