--- a/package.json
+++ b/package.json
@@ -16,32 +16,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.1",
-    "@supabase/supabase-js": "1.35.3",
-    "@supabase/ui": "0.36.5",
-    "dompurify": "^2.3.3",
+    "@apollo/client": "3.6.9",
+    "@supabase/supabase-js": "1.35.4",
+    "dompurify": "2.3.8",
     "fs": "^0.0.1-security",
     "graphql": "^16.5.0",
     "gray-matter": "^4.0.3",
-    "next": "^12.1.6",
+    "next": "^12.2.2",
     "next-mdx-remote": "4.0.3",
     "path": "^0.12.7",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "reading-time": "^1.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reading-time": "1.5.0",
     "styled-components": "^5.3.5",
     "swr": "1.3.0"
   },
   "devDependencies": {
-    "@types/dompurify": "^2.3.1",
-    "@types/node": "17.0.31",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.3",
+    "@types/dompurify": "2.3.3",
+    "@types/node": "18.0.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.25",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
-    "sass": "^1.51.0",
-    "typescript": "4.6.4"
+    "sass": "^1.53.0",
+    "typescript": "4.7.4"
   }
 }
