fix: google analytics behaviour

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,11 @@
         "styles/*"
       ]
     },
-    "incremental": true
+    "incremental": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./helpers/types"
+    ]
   },
   "include": [
     "next-env.d.ts",
