doc: update readme and contact email address

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.1.0",
   "author": {
     "name": "Sunny Prakash",
-    "email": "info@codesupr.com"
+    "email": "info@sunnyprakash.com"
   },
   "homepage": "https://sunnyprakash.com",
   "license": "MIT",
