feat: migrate to vite

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:react-hooks/recommended",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
@@ -16,7 +17,7 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
+        "react-refresh",
         "@typescript-eslint"
     ],
     "rules": {
