--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,14 +1,13 @@
 {
-  "arrowParens": "always",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
-  "quoteProps": "as-needed",
-  "singleQuote": true,
   "semi": true,
-  "printWidth": 120,
+  "printWidth": 125,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
   "useTabs": false,
-  "tabWidth": 1,
-  "trailingComma": "es5"
+  "arrowParens": "avoid",
+  "jsxSingleQuote": true,
+  "trailingComma": "all",
+  "endOfLine": "auto"
 }
-  
