--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,23 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "assets/*": [
+        "src/assets/*"
+      ],
+      "theme/*": [
+        "src/theme/*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "pages/*": [
+        "src/pages/*"
+      ],
+      "helpers/*": [
+        "src/helpers/*"
+      ]
+    },
     "target": "es5",
     "lib": [
       "dom",
