--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "5.0.2",
+  "version": "5.1.0",
   "author": {
     "name": "Sunny Prakash",
     "email": "info@sunnyprakash.com"
@@ -27,6 +27,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
@@ -37,6 +39,10 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint-fix": "eslint --fix src/**/*.{ts,tsx,}",
-    "format": "prettier --write src/**/*.{ts,tsx,} --config .prettierrc.json"
+    "format": "prettier --write src/**/*.{ts,tsx,} --config .prettierrc.json",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": ["eslint --fix src/**/*.{ts,tsx,}", "prettier --write src/**/*.{ts,tsx,} --config .prettierrc.json --ignore-unknown"]
   }
 }
