--- a/package.json
+++ b/package.json
@@ -11,38 +11,41 @@
     "url": "https://github.com/sprakash57/portfolio"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-react": "^4.0.4",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "^2.8.7",
-    "typescript": "^5.0.2",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint-fix": "eslint --fix src/**/*.{ts,tsx,}",
-    "format": "prettier --write src/**/*.{ts,tsx,} --config .prettierrc.json",
+    "lint": "eslint src/**/*.{ts,tsx,} --report-unused-disable-directives",
+    "lint-fix": "eslint src/**/*.{ts,tsx,} --fix",
+    "format": "prettier --write --config .prettierrc --ignore-unknown",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*": ["eslint --fix src/**/*.{ts,tsx,}", "prettier --write src/**/*.{ts,tsx,} --config .prettierrc.json --ignore-unknown"]
+    "**/*": [
+      "eslint src/**/*.{ts,tsx,} --fix",
+      "prettier --write --config .prettierrc --ignore-unknown"
+    ]
   }
 }
