--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "author": {
     "name": "Sunny Prakash",
     "email": "info@sunnyprakash.com"
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "intro.js-react": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
