--- a/package.json
+++ b/package.json
@@ -1,53 +1,42 @@
 {
   "name": "portfolio",
-  "version": "5.1.1",
-  "author": {
-    "name": "Sunny Prakash",
-    "email": "info@sunnyprakash.com"
+  "version": "5.1.2",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "homepage": "https://sunnyprakash.com",
-  "license": "MIT",
-  "repository": {
-    "url": "https://github.com/sprakash57/portfolio"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "intro.js-react": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-joyride": "^2.5.5",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.6.5",
+    "@types/node": "^16.18.54",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "@vitejs/plugin-react": "^4.0.4",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.5"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint src/**/*.{ts,tsx,} --report-unused-disable-directives",
-    "lint-fix": "eslint src/**/*.{ts,tsx,} --fix",
-    "format": "prettier --write --config .prettierrc --ignore-unknown",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "**/*": [
-      "eslint src/**/*.{ts,tsx,} --fix",
-      "prettier --write --config .prettierrc --ignore-unknown"
-    ]
+    "typescript": "^4.9.5"
   }
 }
