--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "assets/*": [
-        "src/assets/*"
-      ],
-      "theme/*": [
-        "src/theme/*"
-      ],
-      "components/*": [
-        "src/components/*"
-      ],
-      "pages/*": [
-        "src/pages/*"
-      ],
-      "helpers/*": [
-        "src/helpers/*"
-      ]
-    },
     "target": "es5",
     "lib": [
       "dom",
@@ -36,7 +18,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
   },
   "include": [
     "src"
